--- a/iset_kr/.gitignore
+++ b/iset_kr/.gitignore
@@ -1,7 +1,7 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-# Compiled output
-/dist
+/Compiled output
+# (removed /dist to allow committing build artifacts when desired)
 /tmp
 /out-tsc
 /bazel-out
