--- a/iset_kr/package.json
+++ b/iset_kr/package.json
@@ -33,6 +33,8 @@
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
+    "@angular/router": "^19.2.18",
+    "@angular/ssr": "^19.2.19",
     "@netlify/angular-runtime": "^3.0.1",
     "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
@@ -40,6 +42,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase": "^12.7.0",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.8.0",
