--- a/iset_kr/.gitignore
+++ b/iset_kr/.gitignore
@@ -38,9 +38,8 @@ testem.log
 /typings
 __screenshots__/
 
-# System files
-.DS_Store
-Thumbs.db
+# Environment variables
+.env
 
 # Uploaded files
 /uploads
